--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node ./dist/Index.js"
+    "typecheck": "tsc --noEmit",
+    "dev": "tsup src/index.ts --format esm --outDir dist --sourcemap --watch --onSuccess \"node dist/index.js\"",
+    "build": "tsup src/index.ts --format esm --outDir dist --sourcemap",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.4",
     "@types/jsonwebtoken": "^9.0.10",
-    "typescript": "^5.9.2"
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
